implementa autenticacao, cadastro e telas

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">DoeVida</string>
+    <string name="id_client_web">557579959757-9st40vtj3v0dpeljk79mb83hon1935ea.apps.googleusercontent.com</string>
 </resources>
